# dbf_sync

./: LICENSE  README.md  __init__.py  config.yaml  dbf_sync.py  pylint.yml  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: python-package.yml
tests/: test_basic.py
