[tool.poetry]
name = "dbf-sync"
version = "2.0.0"
description = "Синхронизация DBF-файлов с БД (SQLite/PostgreSQL)"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dbf_sync.py"}]

[tool.poetry.dependencies]
python = "^3.8"
dbfread = "^2.0.7"
pyyaml = "^6.0"
psycopg2-binary = { version = "^2.9", optional = true }  # Опционально для PostgreSQL

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-mock = "^3.0"
black = "^23.0"
pylint = "^2.17"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.pytest.ini_options]
addopts = "-v --cov=dbf_sync --cov-report=html"
testpaths = ["tests"]

[tool.pylint.master]
py-version = "3.8"
load-plugins = ""

[tool.pylint.reports]
output-format = "colorized"
reports = "no"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "invalid-name",
    "too-many-arguments",
    "too-many-locals",
    "import-error",
    "no-else-return",
    "broad-except"
]

[tool.pylint.basic]
good-names = "i,j,k,ex,e,f,cfg,db,fs,cid"

[tool.pylint.variables]
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"

[tool.pylint.design]
max-args = 10
max-locals = 20

[tool.pylint.similarities]
min-similarity-lines = 6

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
